# gcl_sdk

./: .gitignore  404.html  README.md  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  sitemap.xml  tox.ini
.github/workflows/: docs.yml  markdownlint.yml  publish-to-pypi.yml  tests.yaml
audit/audit/: index.html
docs/: README.md
docs/audit/: audit.md
docs/events/: events.md
docs/universal_agent/: capability_driver_quick_start.md  direct_driver_quick_start.md  metadata_driver_quick_start.md  universal_agent.md  universal_agent_quick_start.md
docs/universal_builder/: core_infra_builder.md  paas_builder.md  universal_builder.md  universal_builder_quick_start.md  universal_scheduler.md
events/events/: index.html
gcl_sdk/: version.py
gcl_sdk/agents/universal/: constants.py  driver.py  exceptions.py  render.py  utils.py
gcl_sdk/agents/universal/api/: contexts.py  controllers.py  crypto.py  middlewares.py  packers.py
gcl_sdk/agents/universal/clients/: orch.py  status.py
gcl_sdk/agents/universal/clients/backend/: base.py  core.py  db.py  exceptions.py  rest.py
gcl_sdk/agents/universal/clients/http/: base.py  orch.py  status.py
gcl_sdk/agents/universal/clients/orch/: base.py  db.py  http.py
gcl_sdk/agents/universal/cmd/: universal_agent.py  universal_agent_db_back.py
gcl_sdk/agents/universal/dm/: models.py
gcl_sdk/agents/universal/driver/: direct.py  meta.py  render.py
gcl_sdk/agents/universal/drivers/: core.py  direct.py  guest.py  lb.py  meta.py  render.py  service.py  ssh_key.py
gcl_sdk/agents/universal/orch_api/: controllers.py  routes.py
gcl_sdk/agents/universal/services/: agent.py  builder.py  common.py  scheduler.py
gcl_sdk/agents/universal/status_api/: controllers.py  routes.py
gcl_sdk/agents/universal/status_api/dm/: models.py
gcl_sdk/agents/universal/storage/: base.py  common.py  fs.py
gcl_sdk/audit/: constants.py
gcl_sdk/audit/api/: controllers.py
gcl_sdk/audit/dm/: models.py
gcl_sdk/clients/http/: base.py
gcl_sdk/cmd/: gservice.py
gcl_sdk/common/: constants.py  log.py  types.py  utils.py
gcl_sdk/common/oslo/: types.py
gcl_sdk/common/services/: gservice.py
gcl_sdk/events/: clients.py  opts.py
gcl_sdk/events/dm/: models.py
gcl_sdk/events/services/: senders.py
gcl_sdk/infra/: constants.py
gcl_sdk/infra/dm/: models.py
gcl_sdk/infra/services/: builder.py
gcl_sdk/migrations/: 0000-init-events-table-2cfd220e.py  0001-universal-agent-391c09.py  0002-init-auditlog-table-c6f740.py  0003-ua-addtional-hashes-6e9ca8.py  0004-ua-resources-relations-e9a811.py  0005-ua-api-encryption-keys-2f8d3a.py
gcl_sdk/paas/dm/: lb.py  services.py
gcl_sdk/paas/services/: builder.py
gcl_sdk/tests/functional/: conftest.py  utils.py
gcl_sdk/tests/functional/agents/: test_universal_agent.py  test_universal_builder.py
gcl_sdk/tests/functional/restapi/: test_audit.py  test_encryption_api.py  test_orch_api.py  test_status_api.py
gcl_sdk/tests/functional/services/: test_gservice.py
gcl_sdk/tests/unit/: test_oslo_types.py  test_utils.py
gcl_sdk/tests/unit/agents/drivers/: test_db_backend.py  test_direct_driver.py  test_meta.py  test_meta_driver.py  test_storage_singleton.py  test_user_capability_driver.py
ru/: index.html
ru/audit/audit/: index.html
ru/events/events/: index.html
ru/universal_agent/capability_driver_quick_start/: index.html
ru/universal_agent/direct_driver_quick_start/: index.html
ru/universal_agent/fact_driver_quick_start/: index.html
ru/universal_agent/metadata_driver_quick_start/: index.html
ru/universal_agent/universal_agent/: index.html
ru/universal_agent/universal_agent_quick_start/: index.html
ru/universal_builder/core_infra_builder/: index.html
ru/universal_builder/paas_builder/: index.html
ru/universal_builder/universal_builder/: index.html
ru/universal_builder/universal_builder_quick_start/: index.html
ru/universal_builder/universal_scheduler/: index.html
ru/universal_scheduler/universal_scheduler/: index.html
search/: search_index.json
universal_agent/capability_driver_quick_start/: index.html
universal_agent/direct_driver_quick_start/: index.html
universal_agent/fact_driver_quick_start/: index.html
universal_agent/metadata_driver_quick_start/: index.html
universal_agent/universal_agent/: index.html
universal_agent/universal_agent_quick_start/: index.html
universal_builder/core_infra_builder/: index.html
universal_builder/paas_builder/: index.html
universal_builder/universal_builder/: index.html
universal_builder/universal_builder_quick_start/: index.html
universal_builder/universal_scheduler/: index.html
universal_scheduler/universal_scheduler/: index.html
